testsuite/tests/partial-sigs/should_fail/T11515.hs
{-# LANGUAGE ConstraintKinds, TypeFamilies #-}

module T11515 where

type family ShowSyn a where ShowSyn a = Show a

foo :: (ShowSyn a, _) => a -> String
foo x = show x
